ChangeLog for RQL
=================

--
    * rql checker raise BadRQLQuery for inconsistent orderby on distinct query
    * correctly restore .parent when undoing RemoveNodeOperation
	
2008-09-24  --  0.20.0
    * is_instance_of support
    * raise BadRQLQuery on queries like 'Any X WHERE X name Toto, P is Person'
    * "NOT X identity Y" is now allowed
    * do not add relation constraint on variables used in math expression
	
2008-08-29  --  0.19.2
    * fix undoing of add_relation and variable name allocation on query using
      some subquery
    * add missing selected_index() method on ColumnAlias
    * set_possible_types() propagate to sub-queries since some additional
      type constraints may be set in the outer query
    * new type resolver ignore type restrictions, used by erudi during syntax
      tree annotation
	
2008-08-07  --  0.19.1
    * should not simplify variables used in the GROUPBY clause when there is a
      HAVING clause

    * implements set_limit / set_offset on UNION nodes



2008-07-22  --  0.19.0
    * grammar changes: LIMIT / OFFSET should now be before the WHERE clause,
      though bw compat will be kept for some time

    * when simplifying constant uid nodes, don't remove them from group terms if
      there is a HAVING clause

    * new get_variable_variables on Union and Select nodes



2008-07-04  --  0.18.3
    * fix add_type_restriction to support frozenset and dict of types



2008-06-06  --  0.18.2
    * remove group/sort undoing fix

    * set stinfo['possibletypes'] and update solution dictionnary for variable
      inserted for new identity relation

    * error resilient unregister_reference

    * init variable annotation information on annotation, not variable
      instanciation



2008-05-12  --  0.18.1
    * bugfix in remove_groups and remove_sort_terms



2008-05-08  --  0.18.0
    * UNION support

    * HAVING support

    * GROUPBY and ORDERBY moved *before* WHERE

    * code cleanup, fixes and refactorings


